--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,15 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
 }
 
+h1 {
+    color: black;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .search-container {
     display: flex;
     flex-direction: column;
@@ -12,8 +21,6 @@ body {
 
 .feature-list{
     width: 173px;
-
-
 }
 
 .parks-search-container {
