--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,41 +1,113 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-family: -apple-system, BlinkMacSystemFont, "San Francisco", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    background: linear-gradient(267deg, #ffffff, #ccdaff, #ffc6c6);
+    background-size: 600% 600%;
+    
+    animation: gradient 29s ease infinite;
+}
+@keyframes gradient {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
 }
 
-h1 {
-    color: black;
+.content-container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  max-width: 9000px;
+}
+
+.content-box-container {
+  display: flex;
+  
+}
+
+.header-container {
+  width: 30em;
+  text-align: center;
+  margin-top: 10em;
+}
+.header-container h1 {
+  margin-bottom: 1.5em;
+}
+.header-container p {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+.header-container h2 {
+  margin-bottom: 2em;
+}
+.header-container #first-hr {
+  width: 0;
+}
+.header-container #last-hr {
+  width: 0;
+  align-items: ceneter;
+  margin-bottom: 2em;
 }
 
 .wrapper {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .search-container {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    border: 2px solid black;
-    border-radius: 13px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 2px solid black;
+  border-radius: 13px;
+}
+.search-container h1 {
+  margin-top: 0;
+}
+.search-container {
+  margin: 1em;
+  max-height: 154.312px;
 }
 
-.feature-list{
-    width: 173px;
+.search-results-container {
+  max-width: 450.328px;
+  display: flex;
+  flex-flow: row;
+  padding: 20px;
+  padding-top: 0%;
+  margin-top: 1em;
+  border: 2px solid black;
+  border-radius: 13px;
+  position: relative;
+}
+
+.content-boxes {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.itinerary-display {
+  margin: 1em;
+}
+
+.feature-list {
+  width: 173px;
 }
 
 .parks-search-container {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .art-search-container {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .restaurant-search-container {
-    margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 hr {
-    border-top: 2px solid black;
+  color:#000000;
+	background:#000000;
+	height:2px;
+	border:none
 }
-
