--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   flex-flow: column;
   align-items: center;
-  max-width: 9000px;
+  max-width: 80em;
 }
 
 .content-box-container {
@@ -64,12 +64,13 @@ body {
   margin-top: 0;
 }
 .search-container {
+  position: relative;
   margin: 1em;
   max-height: 154.312px;
 }
 
 .search-results-container {
-  max-width: 450.328px;
+  width: 400px;
   display: flex;
   flex-flow: row;
   padding: 20px;
@@ -77,7 +78,6 @@ body {
   margin-top: 1em;
   border: 2px solid black;
   border-radius: 13px;
-  position: relative;
 }
 
 .content-boxes {
@@ -86,7 +86,20 @@ body {
 }
 
 .itinerary-display {
+  padding: 20px;
+  padding-top: 0%;
+  border: 2px solid black;
+  border-radius: 13px;
+  width: 300px;
+  height: 250px;
   margin: 1em;
+}
+
+.results p {
+  padding-top: 0;
+  padding-left: 0;
+  padding-bottom: 10px;
+  margin: 0%;
 }
 
 .feature-list {
