--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -71,6 +71,8 @@ body {
 
 .search-results-container {
   width: 400px;
+  height: 400px;
+  overflow: scroll;
   display: flex;
   flex-flow: row;
   padding: 20px;
@@ -123,4 +125,12 @@ hr {
 	background:#000000;
 	height:2px;
 	border:none
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  display: none;
 }
